test fix iframe on ios

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -621,9 +621,9 @@ a:last-of-type.btn:hover {
 iframe, object, embed {
   max-width: 100%!important;
   max-height: 700px!important;
-  /*margin: 0 auto;
+  margin: 0 auto;
   display: block;
-  flex-basis: 100%;*/
+  /*flex-basis: 100%;*/
 }
 
 @media screen and (max-width: 42em) {
